# gtk-accounting

./: .clang-format  .gitignore  CMakeLists.txt  README.md  theme.css
app/: AddTransactionPopup.cpp  AddTransactionPopup.h  Builder.cpp  Builder.h  CMakeLists.txt  ComboBoxMethods.cpp  ComboBoxMethods.h  EntryMethods.cpp  EntryMethods.h  Facade.cpp  Facade.h  FilterBox.cpp  FilterBox.h  FilterWindow.cpp  FilterWindow.h  InfoBox.cpp  InfoBox.h  ListStore.h  MenuBox.cpp  MenuBox.h  Table.cpp  Table.h  main.cpp
glade/: add-transaction-window.glade  filter-window.glade  main-window.glade  main-window.glade~
include/gtk-accounting/: Connection.h  DatabaseInterface.h  DatabaseResult.h  DispatchInterface.h  Functor.h  LibFacade.h  LibFacadeInterface.h  Log.h  LogChannel.h  LogDispatcher.h  MainDispatcher.h  Precision.h  Result.h  ScopedConnection.h  Signal.h  Slot.h  SqliteImplementation.h  TestClass.h  Time.h  Transaction.h  TransactionHandler.h  TransactionInterface.h
include/gtk-accounting/db/: DatabaseInterface.h  DatabaseResult.h  SqliteImplementation.h
include/gtk-accounting/dispatch/: DispatchInterface.h  MainDispatcher.h
include/gtk-accounting/facade/: LibFacade.h  LibFacadeInterface.h
include/gtk-accounting/filter/: Filter.h  FilterHandler.h  FilterInterface.h  FilterParser.h  FilterWriter.h
include/gtk-accounting/log/: Log.h  LogChannel.h  LogDispatcher.h
include/gtk-accounting/misc/: Precision.h  Result.h  Time.h
include/gtk-accounting/signal/: Connection.h  Slot.h
include/gtk-accounting/transaction/: Transaction.h  TransactionHandler.h  TransactionInterface.h
requirements/: backend.md  features.md  gui.md
src/: CMakeLists.txt  FilterHandler.cpp  FilterParser.cpp  FilterWriter.cpp  LibFacade.cpp  LogChannel.cpp  LogDispatcher.cpp  MainDispatcher.cpp  Precision.cpp  ScopedConnection.cpp  SqliteImplementation.cpp  TestClass.cpp  Time.cpp  TransactionHandler.cpp  main.cpp
